# treadmill-bluetooth-macos

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/: flow.json
.github/workflows/: ci.yml  release.yml
config/: config.example.json  config.example.toml  goals.example.json  goals.json
docs/: README.md  ci.md
docs/adr/: 0001-no-macos-bluetooth-device-list.md  0002-life-os-integration-boundary.md
docs/backlog/: 004-led-control-via-hci-capture.md  005-session-state-extract.md  006-speed-quantize-newtype.md  007-split-god-modules.md  008-typed-config-apply.md  009-btleplug-panic-wedges-ble-scan.md  010-db-busy-kills-presence-stream.md  011-review-followups-wave1.md
docs/research/: 001-yesoul-ble-protocol.md  002-heart-rate-polar-h10.md  003-reliability-architecture-review.md  004-independent-reliability-review.md  005-rf-sniff-devices-incline-remote.md  gatt-snapshot.json
docs/tasks/: 000-project-bootstrap.md  001-verify-treadmill-on-hardware.md  002-macos-bluetooth-permission.md  003-yesoul-w2-pro-controller.md  005-presence-daemon-stats.md  006-status-power-hooks-workout-splitting.md  007-daemon-hang-unbounded-ble-awaits.md  008-stats-readability-raw-hints-tm-alias.md  009-tmux-workout-widget.md  010-away-duration-back-toast.md  011-step-goal-milestones.md  012-pause-resume-speed-restore.md  013-control-commands-via-daemon-queue.md  014-configurable-workout-gap-segments.md  015-recompute-segments-from-raw.md  016-default-speed-on-workout-start.md  017-hot-reload-goals-config.md  018-streaming-watchdog-fast-reconnect.md  019-public-release-prep.md  020-auto-pause-idle-belt.md  021-rename-goals-config-to-config.md  026-hr-battery-level.md  (+35 more)
macos/: AppIcon.icns  Info.plist
scripts/: build-icon.sh  generate-icon.swift  install-daemon.sh  install-prebuilt.sh  register-notification-identity.sh  release.sh  run.sh  uninstall-daemon.sh
src/: activity.rs  auto_pause.rs  config_apply.rs  control.rs  control_command.rs  daemon.rs  default_speed.rs  discover.rs  fitshow.rs  ftms.rs  goals.rs  hr.rs  hr_session.rs  logger.rs  main.rs  notify.rs  power.rs  presence.rs  recompute.rs  recompute_hr.rs  scan.rs  sniff.rs  speed.rs  store.rs  treadmill_link.rs  widget.rs  zone_hold.rs  zone_session.rs
(+30 files in other folders)
