[package]
name = "treadmill-bluetooth-macos"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
description = "macOS Bluetooth Low Energy connector for a Yesoul treadmill"
license = "MIT"
repository = "https://github.com/korniychuk/treadmill-bluetooth-macos"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
btleplug = "0.12.0"
chrono = "0.4.42"
clap = { version = "4.6.1", features = ["derive"] }
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
futures = "0.3.32"
io-kit-sys = "0.5.0"
mac-notification-sys = "0.6.15"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = "1.23.4"
